# okr4-ho1-c2g3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: code_qa.yml
extraction/: db_gateway.py  extraction.py  utils.py
extraction/config/: aws_settings.py  db_settings.py
infrastructure/: main.tf  outputs.tf  terraform.tfvars  variables.tf
load/: create_tables.py  file_format.py  integration.py  load_data.py  snowpipe.py  stage.py
load/config/: snowflake_config.py
orchestration/dags/: airbyte_dag.py
snowflake/: load_from_stage.sql
snowflake_scripts/config/: aws_s3_config.py
snowflake_scripts/python_scripts/: load_from_stage.py  storage_integration.py
snowflake_scripts/sql_scripts/: storage_integration.sql
